<resources>
    <string name="app_name">Pepper and MLKit</string>
    <string name="permission_deny_text">Die notwendigen Permissions fehlen. Die Anwendung wird geschlossen.</string>
    <string name="title_activity_main" translatable="false">Pepper ML Kit Digital Ink Recognition</string>
    <string name="german">Deutsch</string>
    <string name="english">English</string>
    <string name="spanish">español</string>
    <string name="wrong_language_title_dialog">WARNUNG</string>
    <string name="wrong_language_message_dialog">Dieser Inhalt gibt es derzeit nur auf Deutsch, Spanisch und Englisch. Um fortzufahren ändern Sie die Tablet-Sprache.</string>
    <string name="changedModeBookmark">changedModeBookmark</string>
    <string name="GameMode">GameMode</string>
    <string name="drawingMode">Zeichnung</string>
    <string name="textMode">Text</string>
    <string name="recognizedDrawing">recognizedDrawing</string>
    <string name="notRecognizeDrawingBookmark">notRecognizeDrawingBookmark</string>
    <string name="text_draw">Zeichnung / Text</string>
    <string name="clear">Löschen</string>
    <string name="readyToRecognizeBookmark">readyToRecognizeBookmark</string>
    <string name="recognizedDrawingBookmark">recognizedDrawingBookmark</string>
    <string name="recognizedInovexBookmark">recognizedInovexBookmark</string>
    <string name="recognizedText">recognizedText</string>
    <string name="askedToReadBookmark">askedToReadBookmark</string>
    <string name="recognizedInImage">recognizedInImage</string>
    <string name="recognizedInImageBookmark">recognizedInImageBookmark</string>
    <string name="recognize">Raten</string>
    <string name="rules">Regeln</string>
    <string name="demoRulesBookmark">demoRulesBookmark</string>
    <string name="startDrawingBookmark">startDrawingBookmark</string>
    <string name="startReadingBookmark">startReadingBookmark</string>
    <string name="startSeeingBookmark">startSeeingBookmark</string>
    <string name="game">Start</string>
    <string name="clearBookmark">clearBookmark</string>
    <string name="showPreview">Preview anzeigen</string>
    <string name="hidePreview">Preview ausblenden</string>
    <string name="inovex">inovex</string>
    <string name="notFoundBookmark">notFoundBookmark</string>
    <string name="askedWhereItIsBookmark">askedWhereItIsBookmark</string>
    <string name="objectToLocate">objectToLocate</string>
    <string name="askedToTranslateBookmark">askedToTranslateBookmark</string>
    <string name="textToTranslate">textToTranslate</string>
    <string name="toLanguage">toLanguage</string>
    <string name="translatedBookmark">translatedBookmark</string>
    <string name="textTranslated">textTranslated</string>
    <string name="pronounceTranslationBookmark">pronounceTranslationBookmark</string>
    <string name="startTranslatingBookmark">startTranslatingBookmark</string>
    <string name="TranslationNotPossibleBookmark">TranslationNotPossibleBookmark</string>
    <string name="readingRulesBookmark">readingRulesBookmark</string>
    <string name="seeingRulesBookmark">seeingRulesBookmark</string>
    <string name="translatingRulesBookmark">translatingRulesBookmark</string>
    <string name="drawingRulesBookmark">drawingRulesBookmark</string>
</resources>