<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/drawing_RulesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:text="@string/rules"
            android:textColor="@color/inovex_blue"
            android:onClick="@{() -> viewmodel.onRulesClicked()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <de.inovex.pepper.intelligence.mlkit.ui.drawing.DrawingView
            android:id="@+id/drawing_drawingView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#80FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/drawing_resultsButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/drawing_resultsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/drawing_modelSwitch"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_draw"
                    android:textColor="@color/inovex_blue" />

                <Button
                    android:id="@+id/drawing_clearButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/white"
                    android:text="@string/clear"
                    android:textColor="@color/inovex_blue"
                    android:onClick="@{() -> viewmodel.onClearClicked()}" />

                <Button
                    android:id="@+id/drawing_recognizeButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/inovex_blue"
                    android:text="@string/recognize"
                    android:textColor="@android:color/white"
                    android:onClick="@{() -> viewmodel.onRecognizeClicked()}"/>
            </LinearLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <data>
        <variable
            name="viewmodel"
            type="de.inovex.pepper.intelligence.mlkit.ui.drawing.DrawingViewModel" />
    </data>
</layout>